tests/ui/crossed_streams-expr.stderr
error[E0716]: temporary value dropped while borrowed
 --> tests/ui/crossed_streams-expr.rs:7:13
  |
5 |     let b = guard!(b);
  |             ^^^^^^^^^ creates a temporary value which is freed while still in use
6 |     dbg!(a == b); // ERROR (here == is a static check)
7 | }
  | -
  | |
  | temporary value is freed at the end of this statement
  | borrow might be used here, when `a` is dropped and runs the `Drop` code for type `generativity::LifetimeBrand`
  |
  = note: consider using a `let` binding to create a longer lived value
  = note: this error originates in the macro `guard` (in Nightly builds, run with -Z macro-backtrace for more info)
