tests/ui/crossed_streams-expr.rs
use generativity::guard;

fn main() {
    let a = guard!(a);
    let b = guard!(b);
    dbg!(a == b); // ERROR (here == is a static check)
}
